TL-43 Install Tailwind and port most css rules into utiliy classes

--- a/src/js/pages/popup/popup.html
+++ b/src/js/pages/popup/popup.html
@@ -5,6 +5,6 @@
   <title></title>
 </head>
 <body>
-  <div id="root" class="popup-root root"></div>
+  <div id="root" class="popup-root relative"></div>
 </body>
 </html>
